Major update to Java 11 and merged Badge Activator
Upgraded to Java 11
Added NFC Badge Activator